Fixed issue where CSS rules were overlapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,7 +218,7 @@ nav li a.selected, nav li a.selected:hover {
 	text-align: center;
 	font-weight: normal;
 }
-.home h3 {
+.white-heading {
 	color: #f6f6f6;
 	text-align: center;
 	font-family: 'Montserrat', sans-serif;
